# hexagon-api

./: .env  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  aws-deployment-guide.md  deployment-guide.md  digitalocean-deployment-guide.md  docker-compose.yml  railway.toml  requirements.txt  security_audit.py
.do/: app.yaml
app/: __init__.py  auth.py  auth_secure.py  clerk_client.py  database.py  logger.py  logging_config.py  main.py  middlewares.py  models.py  reset_db.py  schemas.py  user_service.py
app/hexagon-mcp-server/: main.py  pyproject.toml
mcp_hexagon/: README.md  main.py  pyproject.toml  server.py
mcp_hexagon/hexagon_mcp_server/: __init__.py  http_client.py  server.py
scripts/: reset_habits.py
tasks/: reset_habits.py
tests/integration/: __init__.py
tests/unit/: test_user_service.py
